@@ -1,3 +1,9 @@
+2022-11-05 Fojtik Jaroslav  <JaFojtik@yandex.com>
+
+        * coders/wpg.c Shrink amount of colors when palette is bigger than
+        raster could store.
+
+
 2022-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/blob.c (ReadBlobString): Fix oss-fuzz issue 53001
